--- a/ensino.qmd
+++ b/ensino.qmd
@@ -6,10 +6,10 @@ toc: true
 ---
 
 ## Materiais didáticos
-Aos poucos estou disponibilizando meus materiais didáticos em [minha página do GitHub](https://github.com/HugoCarvalhoUFRJ). No momento (dia 06 de março de 2024) a única disciplina com material didático completo é "Estatística e Probabilidade para Ciência da Computação". Aos poucos irei atualizando e colocando de outras matérias que oferto regularmente, pois o processo de organizar tudo que já tenho preparado é trabalhoso. Até metade de 2024 o material de Análise Exploratória de Dados também estará completo. Para solicitar uma versão editável dos materiais, entre em contato comigo.
+Aos poucos estou disponibilizando meus materiais didáticos em [minha página do GitHub](https://github.com/HugoCarvalhoUFRJ). No momento (dia 14 de março de 2024) a única disciplina com material didático completo é "Estatística e Probabilidade para Ciência da Computação". Aos poucos irei atualizando e colocando de outras matérias que oferto regularmente, pois o processo de organizar tudo que já tenho preparado é trabalhoso. Até metade de 2024 o material de Análise Exploratória de Dados também estará completo. Para solicitar uma versão editável dos materiais, entre em contato comigo.
 
 ::: {.callout-note}
-Note que as disciplinas de quando dei aula na UERJ (entre 2015/02 e 2017/01) e de quando fui professor substituto da UFRJ (entre 2013/01 e 2014/02) ainda não estão listadas.
+Note que as disciplinas de quando dei aula na UERJ (entre 2015/02 e 2017/01) ainda não estão listadas.
 :::
 
 ## Universidade Federal do Rio de Janeiro (UFRJ)
@@ -105,9 +105,21 @@ Note que as disciplinas de quando dei aula na UERJ (entre 2015/02 e 2017/01) e d
 ## Universidade Federal do Rio de Janeiro (prof. substituto)
 
 ### 2014/02
+- Cálculo I (6h/semana)
+
+- Cálculo II (4h/semana)
 
 ### 2014/01
+- Cálculo I (6h/semana)
+
+- Cálculo III (4h/semana)
 
 ### 2013/02
+- Cálculo I (6h/semana)
+
+- Cálculo I (6h/semana)
 
 ### 2013/01
+- Cálculo III (4h/semana)
+
+- Cálculo III (4h/semana)
