--- a/compositions.qmd
+++ b/compositions.qmd
@@ -4,7 +4,12 @@ format: lcars-html
 toc: false
 ---
 
-## *Arnediad Dim*, for solo piano
+## Op. 2: *Neldë Cormar*, for solo guitar
+*Neldë Cormar* is a piece inspired by the three Elven Rings of Power, objects of great importance in the mythology created by J. R. R. Tolkien. Each ring is musically represented by a miniature that seeks to evoke a sensation reminiscent of the rings themselves, their properties, their respective bearers, and their deeds within Tolkien's works, especially in the events narrated in *The Lord of the Rings*. *Neldë Cormar* means "three rings" in Quenya, a fictional language created by J. R. R. Tolkien. In his mythology, this language is used ceremonially by the Elves, being uncommon outside of this context —the language most commonly used in everyday life is Sindarin, a derivative of Quenya. Tolkien not only created both languages with complete grammar, but also an alphabet of his own, so the subtitle of the piece is exactly "Neldë Cormar" written in that alphabet. The piece was brilliantly premiered by the guitarist Bernardo Januzzi at the XXXI Panorama da Música Brasileira Atual, one of the most important events of contemporary concert music in Brazil.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/YAxfciXLnqE?si=oN3vnSPhzNST4Gqr&amp;start=3435" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+## Op. 1: *Arnediad Dim*, for solo piano
 
 This is my first composition, a piece for solo piano that is a "musical metaphor" to the [Cantor function](https://en.wikipedia.org/wiki/Cantor_function), also known as a *devil's staircase*, for its "infinite" number of steps. Apart from using several ideas from the iterative process of the construction of the Cantor set, the main goal of the piece is to evoke the feeling of anguish when climbing an infinite staircase.
 
@@ -15,6 +20,5 @@ Regarding the name of the piece, *Arnediad Dim* means "endless staircase" in Sin
 <iframe width="560" height="315" src="https://www.youtube.com/embed/IKE3Icar8CY?si=dLBbFoQYucYpVOwW&amp;start=3279" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 The piece was also performed live, also by Tamara, on the XXX Panorama da Música Brasileira Atual, one of the most important events of contemporary concert music in Brazil:
-
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Zjdi6O0EjXM?si=TKO-ARh2JlBDcRLG&amp;start=1452" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
