--- a/research.qmd
+++ b/research.qmd
@@ -17,6 +17,9 @@ toc: true
 * Alves-Bezerra, M.; **Tremonte, H.**; Almeida, C. B.; Grillo, L. A. M.; Sola-Penna, M.; Majerowicz, D.; Braz, G. R. C.; Gondim, K. C.; Paiva-Silva, G. O. "Serotonin regulates an acyl-CoA-binding protein (ACBP) gene expression in the midgut of Rhodnius prolixus". Insect Biochemistry and Molecular Biology, v. 40. 2010. [[ScienceDirect](https://www.sciencedirect.com/science/article/abs/pii/S0965174810000032)]
 
 ## Conference papers
+* Matos, N. L.; **Carvalho, H.**; Zanini, C. T. P. "'Shallow' Neural Network Architectures for Musical Genre Classification". Proceedings of the 1st Latin American Music Information Retrieval Workshop (LAMIR). 2025. [[PDF](https://zenodo.org/records/14908040)]
+* **Carvalho, H.**; Martins, F. D.; Almada, C. de L. "A Corpus Study of Rhythm in Brazilian Popular Music". Proceedings of the 1st Latin American Music Information Retrieval Workshop (LAMIR). 2025. [[PDF](https://zenodo.org/records/14908040)]
+* **Carvalho, H.**; Li, M. S.; di Luca, M.; Wing, A. M. "A Kalman Filter model for synchronization in musical ensembles". Proceedings of the 25th International Society for Music Information Retrieval (ISMIR 2025). 2025. [[PDF](https://ismir2024program.ismir.net/poster_347.html)]
 * Matos, N. L.; **Carvalho, H.** "Uma implementação eficiente em Python de um algoritmo de separação de fontes sonoras". Proceedings of the VI International Conference on Music and Mathematics (MusMat 2021). 2021. [[PDF](https://musmat.org/wp-content/uploads/2022/06/04_DeMatos_Carvalho.pdf)]
 * Carvalho, L. F. V.; **Carvalho, H.** "A system based on sinusoidal analysis for the estimation and compensation of pitch variations in musical recordings". Proceedings of the 20th International Conference on Digital Audio Effects (DAFx'17). 2017. [[PDF](http://dafx17.eca.ed.ac.uk/papers/DAFx17_paper_77.pdf)]
 * **Carvalho, H.**; Ávila, F. R.; Biscainho, L. W. P. "Bayesian suppression of memoryless nonlinear audio distortion". Proceedings of the 23rd European Signal Processing Conference (EUSIPCO 2015). 2015. [[PDF](https://www.eurasip.org/Proceedings/Eusipco/Eusipco2015/papers/1570103841.pdf)]
