--- a/research.qmd
+++ b/research.qmd
@@ -4,6 +4,9 @@ format: lcars-html
 toc: true
 ---
 
+## Books
+* Almada, C.; Mathias, C.; Saraiva, C.; Moreira, D.; **Carvalho, H.**; Pitombeira, L. (editors); "Schoenberg: Music and Theory". MusMat Series. 2024. [[PDF](https://musmat.org/en/musmat-series/volume-i/)]
+
 ## Journal papers
 * Almada, C.; **Carvalho, H.**; "Entropy, Probabilistic Harmonic Space, and the Harmony of Antonio Carlos Jobim". Musica Theorica, v. 7, n. 1. 2023. [[PDF](https://revistamusicatheorica.tema.mus.br/index.php/musica-theorica/article/view/202)]
 * Pareyon, G. **et al.** "Music and Mathematics in Latin America: Major Developments in the Last 25 Years". MusMat: Brazilian Journal on Music and Mathematics, v. 6, n. 1. 2022. [[PDF](https://musmat.org/wp-content/uploads/2022/06/02-Pareyon-et-al-V6N1_2022.pdf)]
