--- a/index.qmd
+++ b/index.qmd
@@ -7,7 +7,7 @@ toc: false
 ![Hugo Carvalho at Inhotim Institute (Brumadinho -- Minas Gerais), home to one of the largest foundations of contemporary art in Brazil and one of the largest outdoor art centers in Latin America. Picture taken by his beloved wife during their honeymoon.](photo.jpg)
 
 <div style="text-align: justify">
-I was born in São Paulo, Brazil, and received the Applied Mathematics degree from the Federal University of Rio de Janeiro ([UFRJ](https://ufrj.br/)) in 2011, the M.Sc. degree from IM/UFRJ in Applied Mathematics in 2013 (monograph in Portuguese - [An Introduction to Singularities in General Relativity](http://objdig.ufrj.br/11/dissert/795029.pdf)), and finally the D.Sc. degree from COPPE/UFRJ in Electrical Engineering, area Signal Processing, being supervised by [Luiz Wagner Pereira Biscainho](http://lattes.cnpq.br/1765239890846505) and [Flávio Rainho Ávila](http://lattes.cnpq.br/6480915325344415) (thesis in English - [Bayes Meets Bach: Applications of Bayesian Statistics to Audio Restoration](http://www.pee.ufrj.br/index.php/pt/producao-academica/teses-de-doutorado/2017-1/2016033153-bayes-meets-bach-applications-of-bayesian-statistics-to-audio-restoration/file)). I am Assistant Professor of the [Department of Statistical Methods](http://www.dme.ufrj.br/) from the Federal University of Rio de Janeiro, member of the [MusMat Research Group](https://musmat.org/) and member of the editorial board of [MusMat • Brazilian Journal of Music and Mathematics](https://musmat.org/en/musmat-journal/). Fortunately, I am able to merge my passions in my work: Music and Mathematics, being applications of Statistics to this fascinating intersection my main research interest. I am also interested in Music Information Retrieval, Statistical Signal Processing and Computational Statistics. Together with Carlos Almada, I am coordinator of the [Projeto MPB](https://projetompb.com.br/), a research project whose purpose is to systematically determine the contours of the aesthetic-musical context that is informally called Brazilian Popular Music, through the creation of *corpora* of compositions representative of the aesthetics in question followed by a detailed statistical and musical analysis. I also collaborate with the [ARME Project](https://arme-project.co.uk/), based at the [University of Birmingham](https://www.birmingham.ac.uk/), whose goal is the understanding of how musicians synchronise to each other and build a computational model that can reproduce the musician’s behaviour, allowing the creation of a music training tool where believable virtual musicians will play together with the user. In my spare time I like to brew beer at home with my wife, play classical guitar, learn how to play the harmonica, study music composition (and compose!) and paint in watercolor. I am also an enthusiast of science fiction (specially the Star Trek universe) and J. R. R. Tolkien *legendarium*.
+I was born in São Paulo, Brazil, and received the Applied Mathematics degree from the Federal University of Rio de Janeiro ([UFRJ](https://ufrj.br/)) in 2011, the M.Sc. degree from IM/UFRJ in Applied Mathematics in 2013 (monograph in Portuguese - [An Introduction to Singularities in General Relativity](http://objdig.ufrj.br/11/dissert/795029.pdf)), and finally the D.Sc. degree from COPPE/UFRJ in Electrical Engineering, area Signal Processing, being supervised by [Luiz Wagner Pereira Biscainho](http://lattes.cnpq.br/1765239890846505) and [Flávio Rainho Ávila](http://lattes.cnpq.br/6480915325344415) (thesis in English - [Bayes Meets Bach: Applications of Bayesian Statistics to Audio Restoration](http://www.pee.ufrj.br/index.php/pt/producao-academica/teses-de-doutorado/2017-1/2016033153-bayes-meets-bach-applications-of-bayesian-statistics-to-audio-restoration/file)). I am Assistant Professor of the [Department of Statistical Methods](http://www.dme.ufrj.br/) from the Federal University of Rio de Janeiro, member of the [MusMat Research Group](https://musmat.org/) and member of the editorial board of [MusMat • Brazilian Journal of Music and Mathematics](https://musmat.org/en/musmat-journal/). Fortunately, I am able to merge my passions in my work: Music and Mathematics, being applications of Statistics to this fascinating intersection my main research interest. I am also interested in Music Information Retrieval, Statistical Signal Processing and Computational Statistics. Together with Carlos Almada, I am coordinator of the [Projeto MPB](https://projetompb.com.br/), a research project whose purpose is to systematically determine the contours of the aesthetic-musical context that is informally called Brazilian Popular Music, through the creation of *corpora* of compositions representative of the aesthetics in question followed by a detailed statistical and musical analysis. I also collaborate with the [ARME Project](https://arme-project.co.uk/), based at the [University of Birmingham](https://www.birmingham.ac.uk/), whose goal is the understanding of how musicians synchronise to each other and build a computational model that can reproduce the musician’s behaviour, allowing the creation of a music training tool where believable virtual musicians will play together with the user. I am also host (together with Carlos Mathias and Cecília Saraiva) of the MusMat Podcast (available on [Spotify](https://open.spotify.com/show/39BGsP5zoPjA2xFZU7aBqO) and [YouTube](https://www.youtube.com/@MusMat/videos)), a science popularization program, in Brazilian Portuguese, about Music and Mathematics. In my spare time I like to brew beer at home with my wife, play classical guitar, learn how to play the harmonica, study music composition (and compose!) and paint in watercolor. I am also an enthusiast of science fiction (specially the Star Trek universe) and J. R. R. Tolkien *legendarium*.
 </div>
 
 <a class="btn btn-outline-primary" href="https://www.youtube.com/@profhugocarvalhoufrj" role="button">YouTube</a>
